implented env variable check

--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -9,10 +9,13 @@ This document will go over the implementation of Dot Doctor. For me info about t
 #+end_src
 ** Python
 #+begin_src python :tangle dotdoctor.py
+from environ_helper import (env_exists, get_env)
+from curses_helper import (init_color_pairs, draw_error_page)
 #+end_src
 ** Curses
-I will be using curses module to create user interface.
 #+begin_src python :tangle dotdoctor.py
+import curses
+from curses import wrapper
 #+end_src
 
 * Helpers
@@ -29,7 +32,7 @@ def env_exists(name):
 *** Get environmental variable
 #+begin_src python :tangle environ_helper.py
 def get_env(name):
-    environ.get(name)
+    return environ.get(name)
 #+end_src
 ** Curses Helper
 #+begin_src python :tangle curses_helper.py
@@ -56,9 +59,27 @@ def draw_error_page(stdscr, header, message):
 ** Checking variable
 To locate directory with config files *dot doctor* uses environmental variable called =dotdoctor_dir=.
 I guess at some point I could change this to variable stored in config file, but for the first version it will be more than enough.
+#+begin_src python :tangle dotdoctor.py
+def get_dotdoctor_dir_path():
+    if env_exists("dotdoctor_dir"):
+        global dotdoctor_dir
+        dotdoctor_dir = get_env("dotdoctor_dir")
+    else:
+        wrapper(draw_env_missing_error)
+def draw_env_missing_error(stdscr):
+    init_color_pairs()
+    header = "ERROR"
+    message = "Environemntal variable $dotdoctor_dir is not set."
+    draw_error_page(stdscr, header, message)
+    stdscr.getkey()
+#+end_src
 ** Check the dotdoctor_dir
 Call me crazy but checking if the directory exits and has at least one file inside sounds like a good idea.
 ** Create list of available files and directories
 After everything is ready to go, application goes into dot files repo and creates list of directories and files inside. For now it will only go inside of =.config= directory, other directories will be treated similar to files.
 ** Update list of enabled configs
 After list of files and directories is done, dot doctor goes into home directory and check what files were replaced with symbolic links. If the symbolic link is present config is marked as enabled.
+** Calling init methods
+#+begin_src python :tangle dotdoctor.py
+get_dotdoctor_dir_path()
+#+end_src
