--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -30,6 +30,8 @@ def init_color_pairs():
     curses.init_pair(1, curses.COLOR_GREEN, curses.COLOR_BLACK)
     curses.init_pair(2, curses.COLOR_RED, curses.COLOR_BLACK)
     curses.init_pair(3, curses.COLOR_MAGENTA, curses.COLOR_BLACK)
+    curses.init_pair(6, curses.COLOR_GREEN, curses.COLOR_WHITE)
+    curses.init_pair(7, curses.COLOR_RED, curses.COLOR_WHITE)
 #+end_src
 
 #+RESULTS:
@@ -45,11 +47,14 @@ def draw_error_page(stdscr, header, message):
 #+end_src
 *** Draw Config row
 #+begin_src python :tangle curses_helper.py
-def draw_config_row(stdscr, dot_data, index):
+def draw_config_row(stdscr, dot_data, index, active):
+    mod = 0
+    if active:
+        mod = 5
     if dot_data.status:
-        stdscr.addstr(1+index, 2, dot_data.name, curses.color_pair(1))
+        stdscr.addstr(1+index, 2, dot_data.name, curses.color_pair(1+mod))
     else:
-        stdscr.addstr(1+index, 2, dot_data.name, curses.color_pair(2))
+        stdscr.addstr(1+index, 2, dot_data.name, curses.color_pair(2+mod))
 #+end_src
 
 ** DotData
@@ -159,18 +164,49 @@ def init():
 * Config GUI logic
 ** Draw list of available configs
 #+begin_src python :tangle dotdoctor.py
-def draw_list_of_configs(stdscr):
+def config_list_loop(stdscr):
     curses.curs_set(False)
     init_color_pairs()
+    global current_index
+    current_index = 0
+    while True:
+        stdscr.clear()
+        draw_list_of_configs(stdscr, current_index)
+        if process_input(stdscr.getch()):
+            break
+def draw_list_of_configs(stdscr, current_index):
+    rows, cols = stdscr.getmaxyx()
+    row = 80
     for index, dot_data in enumerate(config_list):
-        draw_config_row(stdscr, dot_data, index)
-    stdscr.getkey()
+        if len(config_list) <= rows-2:
+            draw_config_row(stdscr, dot_data, index, current_index == index)
+        elif current_index < 3 and index < rows-3:
+            draw_config_row(stdscr, dot_data, index, current_index == index)
+        elif current_index >= 3 and index > current_index -3 and index < rows -3 + current_index-2:
+            draw_config_row(stdscr, dot_data, index-(current_index-2), current_index == index)
+def process_input(c):
+    global current_index
+    if c == ord('q'):
+        return True
+    if c == ord('k'):
+        current_index -= 1
+    if c == ord('j'):
+        current_index += 1
 
+    clamp_current_index()
+    return False
+
+def clamp_current_index():
+    global current_index
+    if current_index < 0:
+        current_index = 0
+    if current_index >= len(config_list):
+        current_index = len(config_list)-1
 #+end_src
 
 * Main loop
 #+begin_src python :tangle dotdoctor.py
 if __name__ == "__main__":
     init()
-    wrapper(draw_list_of_configs)
+    wrapper(config_list_loop)
 #+end_src
