config list is now sorted

--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -140,6 +140,7 @@ def create_config_list():
         files_list = os.listdir(path)
         for file in files_list:
             config_list.append(DotData(file, os.path.join(".config", file), False))
+    config_list.sort(key=lambda x: x.name)
 
 #+end_src
 ** Update list of enabled configs
