--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -163,6 +163,8 @@ def set_up_backup_directory():
     path = os.path.join(path, ".backup")
     if os.path.exists(path) == False:
         os.mkdir(path)
+        path = os.path.join(path, ".config")
+        os.mkdir(path)
 #+end_src
 
 ** Calling init methods
@@ -217,17 +219,26 @@ def toggle_config():
     if data.status == False:
         activate_dot_data(data)
     else:
-        data.set_status(False)
+        deactivate_dot_data(data)
 def activate_dot_data(dot_data):
     global dotdoctor_dir
     dot_data.set_status(True)
     home_path = os.path.join(get_env("HOME"), dot_data.relative_path)
     backup_path = os.path.join("./.backup", dot_data.relative_path)
+    backup_path = os.path.abspath(backup_path)
     config_path = os.path.join(dotdoctor_dir, dot_data.relative_path)
     config_path = os.path.abspath(config_path)
     if os.path.exists(home_path):
         shutil.move(home_path, backup_path)
     os.symlink(config_path, home_path)
+def deactivate_dot_data(dot_data):
+    global dotdoctor_dir
+    dot_data.set_status(False)
+    home_path = os.path.join(get_env("HOME"), dot_data.relative_path)
+    backup_path = os.path.join("./.backup", dot_data.relative_path)
+    backup_path = os.path.abspath(backup_path)
+    os.unlink(home_path)
+    shutil.move(backup_path, home_path)
 def clamp_current_index():
     global current_index
     if current_index < 0:
