implemented install script

--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -253,3 +253,10 @@ if __name__ == "__main__":
     init()
     wrapper(config_list_loop)
 #+end_src
+* install.sh
+#+begin_src shell :tangle install.sh
+path=$(dirname $0)
+dot_doctor="/dotdoctor.py"
+ln -s $path$dot_doctor "/usr/local/bin/dotdoctor"
+chmod +x "/usr/local/bin/dotdoctor"
+#+end_src
