--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -135,7 +135,7 @@ def create_config_list():
     config_list = []
     files_list = os.listdir(dotdoctor_dir)
     for file in files_list:
-        if file != ".config":
+        if file != ".config" and file != "README.org" and "README.md":
             config_list.append(DotData(file, file, False))
     if '.config' in os.listdir(dotdoctor_dir):
         path = os.path.join(dotdoctor_dir, ".config")
@@ -179,6 +179,7 @@ def init():
 
 * Config GUI logic
 ** Draw list of available configs
+
 #+begin_src python :tangle dotdoctor.py
 current_index = 0
 def config_list_loop(stdscr):
@@ -190,6 +191,9 @@ def config_list_loop(stdscr):
         draw_list_of_configs(stdscr, current_index)
         if process_input(stdscr.getch()):
             break
+#+end_src
+** Draw List of configs
+#+begin_src python :tangle dotdoctor.py
 def draw_list_of_configs(stdscr, current_index):
     rows, cols = stdscr.getmaxyx()
     row = 80
@@ -200,6 +204,9 @@ def draw_list_of_configs(stdscr, current_index):
             draw_config_row(stdscr, dot_data, index, current_index == index)
         elif current_index >= 3 and index > current_index -3 and index < rows -3 + current_index-2:
             draw_config_row(stdscr, dot_data, index-(current_index-2), current_index == index)
+#+end_src
+** Process input
+#+begin_src python :tangle dotdoctor.py
 def process_input(c):
     global current_index
     if c == ord('q'):
@@ -212,7 +219,9 @@ def process_input(c):
         toggle_config()
     clamp_current_index()
     return False
-
+#+end_src
+** Toogle config
+#+begin_src python :tangle dotdoctor.py
 def toggle_config():
     global config_list, current_index
     data = config_list[current_index]
@@ -220,6 +229,9 @@ def toggle_config():
         activate_dot_data(data)
     else:
         deactivate_dot_data(data)
+#+end_src
+** Activate dot data
+#+begin_src python :tangle dotdoctor.py
 def activate_dot_data(dot_data):
     global dotdoctor_dir
     dot_data.set_status(True)
@@ -231,6 +243,9 @@ def activate_dot_data(dot_data):
     if os.path.exists(home_path):
         shutil.move(home_path, backup_path)
     os.symlink(config_path, home_path)
+#+end_src
+** Deactivate dot data
+#+begin_src python :tangle dotdoctor.py
 def deactivate_dot_data(dot_data):
     global dotdoctor_dir
     dot_data.set_status(False)
@@ -239,6 +254,9 @@ def deactivate_dot_data(dot_data):
     backup_path = os.path.abspath(backup_path)
     os.unlink(home_path)
     shutil.move(backup_path, home_path)
+#+end_src
+** Clamp current index
+#+begin_src python :tangle dotdoctor.py
 def clamp_current_index():
     global current_index
     if current_index < 0:
@@ -257,6 +275,9 @@ if __name__ == "__main__":
 #+begin_src shell :tangle install.sh
 path=$(dirname $0)
 dot_doctor="/dotdoctor.py"
-ln -s $path$dot_doctor "/usr/local/bin/dotdoctor"
+symlinkpath="/usr/local/bin/dotdoctor"
+ln -s $path$dot_doctor
+echo $path$dot_doctor
+echo
 chmod +x "/usr/local/bin/dotdoctor"
 #+end_src
