--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -33,10 +33,6 @@ def init_color_pairs():
     curses.init_pair(6, curses.COLOR_GREEN, curses.COLOR_WHITE)
     curses.init_pair(7, curses.COLOR_RED, curses.COLOR_WHITE)
 #+end_src
-
-#+RESULTS:
-: None
-
 *** Draw Error page
 This is method is a quick and easy way to create error message.
 #+begin_src python :tangle curses_helper.py
@@ -178,7 +174,6 @@ def init():
 
 * Config GUI logic
 ** Draw list of available configs
-
 #+begin_src python :tangle dotdoctor.py
 current_index = 0
 def config_list_loop(stdscr):
@@ -187,6 +182,7 @@ def config_list_loop(stdscr):
     global current_index
     while True:
         stdscr.clear()
+        draw_navigation_help(stdscr)
         draw_list_of_configs(stdscr, current_index)
         if process_input(stdscr.getch()):
             break
@@ -195,7 +191,6 @@ def config_list_loop(stdscr):
 #+begin_src python :tangle dotdoctor.py
 def draw_list_of_configs(stdscr, current_index):
     rows, cols = stdscr.getmaxyx()
-    row = 80
     for index, dot_data in enumerate(config_list):
         if len(config_list) <= rows-2:
             draw_config_row(stdscr, dot_data, index, current_index == index)
@@ -203,6 +198,12 @@ def draw_list_of_configs(stdscr, current_index):
             draw_config_row(stdscr, dot_data, index, current_index == index)
         elif current_index >= 3 and index > current_index -3 and index < rows -3 + current_index-2:
             draw_config_row(stdscr, dot_data, index-(current_index-2), current_index == index)
+#+end_src
+** Draw navigation help
+#+begin_src python :tangle dotdoctor.py
+def draw_navigation_help(stdscr):
+    rows, cols = stdscr.getmaxyx()
+    stdscr.addstr(rows-1, 2, "[j] down | [k] up | [enter] enable/disable config")
 #+end_src
 ** Process input
 #+begin_src python :tangle dotdoctor.py
