--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -63,9 +63,9 @@ def draw_config_row(stdscr, dot_data, y, is_active):
         color_pair_modifier = 5
 
     if dot_data.status:
-        stdscr.addstr(y, 2, dot_data.name, curses.color_pair(1+color_pair_modifier))
+        stdscr.addstr(y, 2, dot_data.get_name(), curses.color_pair(1+color_pair_modifier))
     else:
-        stdscr.addstr(y, 2, dot_data.name, curses.color_pair(2+color_pair_modifier))
+        stdscr.addstr(y, 2, dot_data.get_name(), curses.color_pair(2+color_pair_modifier))
 #+end_src
 
 * Dot Data
@@ -79,6 +79,11 @@ class DotData:
         self.is_directory = is_directory
     def set_status(self, status):
         self.status = status
+    def get_name(self):
+        if self.is_directory:
+            return "{}{}".format(self.name, "/")
+        else:
+            return self.name
 #+end_src
 * Initialize
 ** $dotdoctor_dir
@@ -165,13 +170,14 @@ def validate_root_directory():
 *** Validate backup directory
 When activating config file/directory dot doctor will move existing files to =.backup= directory so we need to check if it exists and if it doesn't create it.
 #+begin_src python :tangle dotdoctor.py
+backup_path = ""
 def validate_backup_directory():
-    global root_path
+    global backup_path, root_path
     backup_path = os.path.join(root_path, ".backup")
     if os.path.exists(backup_path) == False:
         os.mkdir(backup_path)
-        backup_path = os.path.join(backup_path, ".config")
-        os.mkdir(backup_path)
+        cbackup_path = os.path.join(backup_path, ".config")
+        os.mkdir(cbackup_path)
 #+end_src
 
 ** Loading ignore file
@@ -241,22 +247,27 @@ def initialize():
     update_dot_data_status()
 #+end_src
 
-* Config GUI logic
-** Draw list of available configs
+* Logic
+** Main Loop
 #+begin_src python :tangle dotdoctor.py
 current_index = 0
+got_exit_code=False
 def config_list_loop(stdscr):
+    global current_index, got_exit_code
     curses.curs_set(False)
     init_color_pairs()
-    global current_index
     while True:
         stdscr.clear()
         draw_navigation_help(stdscr)
         draw_list_of_configs(stdscr, current_index)
-        if process_input(stdscr.getch()):
+        process_input(stdscr.getch())
+        if got_exit_code:
             break
 #+end_src
 ** Draw List of configs
+This function draws scrollable list of config files.
+
+TBH... I have murky idea what does conditions mean. I did some trial and error at some point and it became part of the cargo cult in this application.
 #+begin_src python :tangle dotdoctor.py
 def draw_list_of_configs(stdscr, current_index):
     rows, cols = stdscr.getmaxyx()
@@ -269,17 +280,21 @@ def draw_list_of_configs(stdscr, current_index):
             draw_config_row(stdscr, dot_data, index-(current_index-2), current_index == index)
 #+end_src
 ** Draw navigation help
+Simple function used to draw available hotkeys at the bottom of the screen.
 #+begin_src python :tangle dotdoctor.py
 def draw_navigation_help(stdscr):
     rows, cols = stdscr.getmaxyx()
-    stdscr.addstr(rows-1, 2, "[j] down | [k] up | [enter] enable/disable config")
+    stdscr.addstr(rows-1, 2, "[j] down | [k] up | [enter] enable/disable config | [q] quit")
 #+end_src
 ** Process input
+Function used to process input received from the user.
+
+10 is curses' code for the =enter= key.
 #+begin_src python :tangle dotdoctor.py
 def process_input(c):
-    global current_index
+    global current_index, got_exit_code
     if c == ord('q'):
-        return True
+        got_exit_code = True
     if c == ord('k'):
         current_index -= 1
     if c == ord('j'):
@@ -300,13 +315,12 @@ def toggle_config():
         deactivate_dot_data(data)
 #+end_src
 ** Activate dot data
+If file or directory already exists in =$HOME= directory, doctor will move it to =.backup= folder and create the symlink to file in config repo.
 #+begin_src python :tangle dotdoctor.py
 def activate_dot_data(dot_data):
-    global dotdoctor_dir
+    global dotdoctor_dir, backup_path
     dot_data.set_status(True)
     home_path = os.path.join(get_env("HOME"), dot_data.relative_path)
-    backup_path = os.path.join("./.backup", dot_data.relative_path)
-    backup_path = os.path.abspath(backup_path)
     config_path = os.path.join(dotdoctor_dir, dot_data.relative_path)
     config_path = os.path.abspath(config_path)
     if os.path.exists(home_path):
@@ -314,15 +328,16 @@ def activate_dot_data(dot_data):
     os.symlink(config_path, home_path)
 #+end_src
 ** Deactivate dot data
+If file or directory already exists in =.backup= directory, doctor will move it to =$HOME= folder and delete the symlink to file in config repo.
 #+begin_src python :tangle dotdoctor.py
 def deactivate_dot_data(dot_data):
-    global dotdoctor_dir
+    global dotdoctor_dir, backup_path
     dot_data.set_status(False)
     home_path = os.path.join(get_env("HOME"), dot_data.relative_path)
-    backup_path = os.path.join("./.backup", dot_data.relative_path)
-    backup_path = os.path.abspath(backup_path)
+    path = os.path.join(backup_path, dot_data.relative_path)
     os.unlink(home_path)
-    shutil.move(backup_path, home_path)
+    if os.path.exists(path):
+        shutil.move(path, home_path)
 #+end_src
 ** Clamp current index
 #+begin_src python :tangle dotdoctor.py
@@ -334,7 +349,7 @@ def clamp_current_index():
         current_index = len(config_list)-1
 #+end_src
 
-* Main loop
+* Main
 #+begin_src python :tangle dotdoctor.py
 if __name__ == "__main__":
     initialize()
