rewritten install.sh

--- a/Dot Doctor.org
+++ b/Dot Doctor.org
@@ -356,12 +356,10 @@ if __name__ == "__main__":
     wrapper(config_list_loop)
 #+end_src
 * install.sh
-#+begin_src shell :tangle install.sh
+#+begin_src shell :tangle install.sh :shebang #!/usr/bin/env sh
 path=$(dirname $0)
 dot_doctor="/dotdoctor.py"
 symlinkpath="/usr/local/bin/dotdoctor"
-ln -s $path$dot_doctor
-echo $path$dot_doctor
-echo
+ln -s $path$dot_doctor $symlinkpath
 chmod +x "/usr/local/bin/dotdoctor"
 #+end_src
